--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,75 @@
     transform: rotate(360deg);
   }
 }
+.icss{
+  text-align: center;
+  height: 30px;
+  top: 10px;
+  border: none;
+  background: transparent;
+  font-size: 20px;
+  font-weight: 500;
+  width: 60%;
+  border-bottom: 2px solid #8566aa;
+  outline: none;
+}
+.bcss{
+  min-height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  border-color: transparent;
+  background-color: #8566aa;
+  color: #fff;
+  border: none;
+  outline: none;
+  margin-left: 10px;
+  box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);  
+}
+
+.adjust-mid{
+  
+  background: #6983aa;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  border: 20px solid gray;
+  margin-top:50%;
+  
+ 
+}
+
+.todo_style{
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+}
+.todo_style .fa-times {
+  width: 20px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #8566aa;
+  border-radius: 50%;
+  margin: 0 15px 0 35px;
+  color: aliceblue;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+}
+.todo_style .fa-times:hover .list_style {
+  color: crimson;
+}
+/* @media (max-width: 768px){
+  .center_div {
+    width: 55%;
+  }
+} */
+
+.main-div{
+  height: 100%;
+  width: auto;
+  display: grid;
+  justify-content: center;
+}
